plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
//	SQL
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '3.4.1'
//	Validate
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.4.1'
//	JWT
	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.12.6'
	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.6'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.6'
//	ENV
	implementation group: 'io.github.cdimascio', name: 'java-dotenv', version: '5.2.2'
//	Email
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.4.1'
	implementation group: 'jakarta.mail', name: 'jakarta.mail-api', version: '2.1.3'
//	Thymeleaf
	implementation group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity5', version: '3.1.3.RELEASE'
//	Cloudinary
	implementation group: 'com.cloudinary', name: 'cloudinary-http44', version: '1.39.0'

}

tasks.named('test') {
	useJUnitPlatform()
}
